# osslsigncode

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  COPYING  ChangeLog  Config.h.in  Dockerfile  INSTALL.W32.md  LICENSE.txt  Makefile.am  Makefile.in  NEWS.md  README  README.md  README.unauthblob.md  TODO  TODO.md  applink.c  appx.c  cab.c  cat.c  code_signing_ca.pem  config.h.in  configure  configure.ac  get_code_signing_ca.py  helpers.c  helpers.h  msi.c  msi.h  osslsigncode.bash  osslsigncode.c  osslsigncode.h  osslsigncode.md  pe.c  script.c  utf.c  vcpkg.json
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: 10_crash_report.md  20_documentation.md  30_feature_request.md  40_questions.md  50_bug_report.md
.github/workflows/: ci.yml  codeql-analysis.yml  codespell.yml  coverity.yml  winget.yml
cmake/: CMakeDist.cmake  CMakeDoc.cmake  CMakeInstall.cmake  CMakeTest.cmake  FindCurl.cmake  FindHeaders.cmake  FindMapping.cmake  FindOpenssl.cmake  SetBashCompletion.cmake  SetCompilerFlags.cmake  SetOptions.cmake  cmake_uninstall.cmake.in
misc/: pagehash.py
misc/softhsm-example-token/: .gitignore  README  README.md  README.txt  gen-token.sh  makefile
tests/: .gitignore  calc_leafhash.py  check_cryptography.py  client_http.py  exec.py  make_certificates.py  myapp.c  sample.wxs  server_http.py  server_http.pyw  start_server.py  test_library  testall.sh  testsign.sh  tsa_server.py
tests/certs/: .gitignore  CACert.pem  CACertCRL.der  CACertCRL.pem  CACertCRL_crldp.pem  CAcross.pem  CAroot.pem  TSA.key  TSA.pem  TSACA.pem  TSACertCRL.der  TSACertCRL.pem  TSA_revoked.key  TSA_revoked.pem  ca-bundle.crt  cert.der  cert.p12  cert.pem  cert.spc  cert_crldp.pem  crosscert.pem  expired.pem  intermediate.pem  intermediateCA.pem  intermediateCA_crldp.pem  key.der  key.pem  key.pvk  keyp.pem  legacy.p12  makecerts.sh  openssl_intermediate.cnf  openssl_root.cnf  openssltest.cnf  password.txt  revoked.pem  revoked.spc  revoked_crldp.pem  tsa-chain.pem  tsa-serial
tests/conf/: makecerts.sh  openssl_intermediate.cnf  openssl_intermediate_crldp.cnf  openssl_root.cnf  openssl_tsa.cnf  openssl_tsa_root.cnf
tests/files/: unsigned.256appx  unsigned.512appx  unsigned.cat  unsigned.ex_  unsigned.mof  unsigned.msi  unsigned.ps1  unsigned.psc1  unsigned.xlsm
tests/recipes/: 01_sign_pem  02_sign_pass  03_sign_der  04_sign_pvk_spc  04_sign_spc  04_sign_spc_pvk  05_sign_pkcs12  06_test_sha256sum  07_sign_timestamp  08_sign_rfc3161  09_sign_page_hashes  10_sign_blob  11_sign_nest  11_sign_readpass_pem  12_sign_readpass_pem  12_sign_readpass_pvk  13_sign_readpass_pkcs12  14_sign_descryption  15_sign_url  16_sign_comm  17_sign_crosscertfile  21_sign_hash_md5  22_sign_hash_sha1  23_sign_hash_sha2  24_sign_hash_sha384  25_sign_hash_sha512  26_extract_signature_pem  27_extract_signature_der  31_attach_signature_der  31_extract_signature  32_attach_signature  32_attach_signature_pem  33_attach_signed  33_remove_signature  34_add_signature  34_attach_nest  35_remove_signature  35_varia_sha256sum  36_add_signature_blob  36_varia_sha256sum  (+19 more)
tests/sources/: CatalogDefinitionFileName.cdf  myapp.c
